roboshop-v1/cart.yml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: roboshop
spec:
  selector:
    appName: cart
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
