roboshop-v1/payment.yml
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    appName: payment
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
