roboshop-v1/shipping.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping
spec:
  selector:
    appName: shipping
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
